--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <span>hello</span>
+    <div class="content">
+        <h1>syssb..663</h1>
+    </div>
 </body>
+<script>
+    let time = new Date();
+</script>
 </html>
