--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <div class="wrapper">
         <div class="content">
             <h1 class="title"></h1>
-            <h1><a href="https://blog.csdn.net/quhongqiang/article/details/80388401">50道js基础面试题</a>
-            </h1>
-            <h1><a href="http://web.jobbole.com/84328/">闭包面试题</a></h1>
-            <h1><a href="https://blog.csdn.net/zhangdongnihao/article/details/88830980">vue拦截器的使用</a></h1>
-            <h1><a href="https://blog.csdn.net/zifeiyu130/article/details/78950244">vue数据更新视图不渲染的详解</a></h1>
-            <h1><a href="https://blog.csdn.net/qq_21423689/article/details/81367294">h5新增的api</a></h1>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
+    <script>
+        bubbly({
+            colorStart: "#111",
+            colorStop: "#422",
+            bubbleFunc: () => `hsla(0, 100%, 50%, ${Math.random() * 0.25})`
+        });
+    </script>
 </body>
 <script>
     var start = new Date('2018-03-16 00:00:00');
@@ -41,8 +43,9 @@
         text-align: center;
     }
     .title {
+        margin: 200px auto;
         display: inline-block;
-        color: #795548;
+        color: pink;
     }
 </style>
 </html>
